[package]
name = "blush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = {version = "0.19.0", features = ["color-hex"]}
eframe = "0.19.0"
color_space = "0.5.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
num = "0.4.0"
rand = {version = "0.8", features = ["small_rng"]}
