[package]
name = "blush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = {version = "0.19.0", features = ["color-hex"]}
eframe = "0.19.0"
palette = "0.6"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
num = "0.4.0"
rand = {version = "0.8", features = ["small_rng"]}
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_log = "0.2"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
